add handling for repo private flag

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,10 @@ inputs:
   access-token:
     description: 'access token with repo scope'
     required: true
+  private:
+    description: 'specifies whether the target repository should be private'
+    required: false
+    default: 'true'
 outputs:
   repo-id:
     description: 'GraphQL ID of newly created repository'
